1. 修改日志输出 2. 格式化代码